feat: harden production reliability gates